--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/bootstrap.css">;
+    <link rel="stylesheet" href="estilo.css">
     <title>Document</title>
 </head>
 
 <body>
+    <div class="jumbotron jumbotron-fluid bg-title">
+        <h1 class="display-4 text-center  text-title">Thiago Kalil</h1>
+        <p class="lead text-center text-title2 ">Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
+    </div>
 
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/bootstrap.js"></script>
 </body>
 
 </html>
