--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.css">;
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="libs/MaterialDesign/MaterialDesign-Webfont-master/css/materialdesignicons.css">
     <title>Document</title>
 </head>
 
 <body>
     <div class="jumbotron jumbotron-fluid bg-title">
         <h1 class="display-4 text-center  text-title">Thiago Kalil</h1>
-        <p class="lead text-center text-title2 ">Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
+        <p class="lead text-center text-title2 ">
+            <i class="mdi mdi-death-star-variant mdi-spin mid-48px"></i> Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
     </div>
 
     <script src="js/jquery-3.4.1.js"></script>
