--- a/index.html
+++ b/index.html
@@ -17,9 +17,60 @@
         <p class="lead text-center text-title2 ">
             <i class="mdi mdi-death-star-variant mdi-spin mid-48px"></i> Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt neque odit eveniet cupiditate deserunt delectus. Explicabo error ut nihil a iure. Quidem beatae ea culpa! Enim, tempore? Ab, maiores eaque.</div>
+                <div>Dolorum at quidem unde architecto asperiores explicabo ea illum libero aspernatur accusamus quae, obcaecati fuga est ex. Culpa, nisi dolore ducimus dolorem provident quae quas ad fuga aliquam voluptas accusamus.</div>
+                <div>Autem fugit a saepe. Cupiditate quos placeat minima et distinctio veritatis harum eum, molestias quam voluptates consequatur. Atque exercitationem ratione ut laudantium perferendis, sint aspernatur laboriosam nesciunt quod consectetur
+                    accusamus?
+                </div>
+                <div>A accusantium consectetur accusamus quis expedita. Necessitatibus maxime soluta quia quo ex, provident iusto sit et temporibus enim natus, delectus sunt voluptatibus hic. Consequatur, corrupti atque quod facere distinctio soluta.</div>
+                <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt neque odit eveniet cupiditate deserunt delectus. Explicabo error ut nihil a iure. Quidem beatae ea culpa! Enim, tempore? Ab, maiores eaque.</div>
+                <div>Dolorum at quidem unde architecto asperiores explicabo ea illum libero aspernatur accusamus quae, obcaecati fuga est ex. Culpa, nisi dolore ducimus dolorem provident quae quas ad fuga aliquam voluptas accusamus.</div>
+                <div>Autem fugit a saepe. Cupiditate quos placeat minima et distinctio veritatis harum eum, molestias quam voluptates consequatur. Atque exercitationem ratione ut laudantium perferendis, sint aspernatur laboriosam nesciunt quod consectetur
+                    accusamus?
+                </div>
+                <div>A accusantium consectetur accusamus quis expedita. Necessitatibus maxime soluta quia quo ex, provident iusto sit et temporibus enim natus, delectus sunt voluptatibus hic. Consequatur, corrupti atque quod facere distinctio soluta.</div>
+            </div>
+            <div class="col-6">
+                <form action="">
+                    <div class="form-group">
+                        <label for="my-input">Nome</label>
+                        <input id="my-input" class="kalil" type="text" name="">
+                    </div>
+                    <div class="form-group">
+                        <label for="my-input">E-mail</label>
+                        <input id="my-input" class="kalil" type="email" name="">
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+
+                                <label for="my-input">Telefone</label>
+                                <input id="telefone" class="kalil" type="text" name="">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+
+                                <label for="my-input">Celular</label>
+                                <input id="celular" class="kalil" type="text" name="">
+                            </div>
+                        </div>
+                    </div>
+
+
+                </form>
+            </div>
+        </div>
+    </div>
+
 
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script src="libs/jQueryMask/jQueryMask/dist/jquery.mask.js"></script>
+    <script src="js/kalil.js"></script>
 </body>
 
 </html>
